# ai-co-share

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
docs/tools/doujianaodai/: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  pet_mcp_server.py  pyproject.toml  requirements.txt
docs/tools/doujianaodai/.superpowers/sdd/: final-review.diff  progress.md  task-1-brief.md  task-1-report.md  task-1-review.diff  task-10-brief.md  task-10-report.md  task-11-brief.md  (+24 more)
docs/tools/doujianaodai/app/: claude_client.py  config.py  main.py  mcp_server.py  preflight.py  session_manager.py  stream_parser.py
docs/tools/doujianaodai/logs/: pet_logger.py
docs/tools/doujianaodai/memory/: activity_writer.py  screenshot_cleaner.py  summary_generator.py
docs/tools/doujianaodai/monitor/: behavior_state.py  idle_detector.py  llm_client.py  ocr.py  ocr_store.py  scene_classifier.py  screen_monitor.py  screenshot.py  text_similarity.py
docs/tools/doujianaodai/tests/: test_activity_writer.py  test_app_main.py  test_behavior_state.py  test_claude_client.py  test_config.py  test_idle_detector.py  test_integration.py  test_mcp_server.py  test_ocr.py  test_ocr_store.py  test_pet_logger.py  test_preflight.py  test_scene_classifier.py  test_screen_monitor.py  test_screenshot.py  test_screenshot_cleaner.py  test_stream_parser.py  test_summary_generator.py  test_text_similarity.py  test_ui.py
docs/tools/doujianaodai/tools/: ocr_benchmark.py
docs/tools/doujianaodai/ui/: activity_log_widget.py  chat_widget.py  overview_widget.py  settings_widget.py  tray_app.py
(+33 files in other folders)
