[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doujianaodai"
version = "0.1.0"
description = "桌面宠物 Agent — 被动屏幕监控 + 活动记忆 + AI 对话"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["desktop-pet", "screen-monitor", "ai-agent", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.6.0",
    "pyobjc-framework-Quartz>=10.0; sys_platform=='darwin'",
    "pyobjc-framework-Cocoa>=10.0; sys_platform=='darwin'",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "scikit-image>=0.22.0",
    "numpy>=1.26.0",
    "PyYAML>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
doujianaodai = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*", "monitor*", "memory*", "logs*", "ui*"]

[tool.setuptools.package-data]
"*" = ["config.yaml"]
